assets/scss/_docs.scss
.docs-wrapper {
  display: flex;
  word-wrap: break-word;
}

.docs-main {
  min-height: 100vh;

  &__article {
    padding: var(--ospo-spacing-none) var(--ospo-spacing-lg);
    grid-area: main;
    display: grid;
    grid-template-areas:
      "intro"
      "toc"
      "content";
    grid-template-rows: auto auto 1fr;
    row-gap: var(--ospo-gap-small);

    @media (min-width: $screen-md) {
      padding: var(--ospo-spacing-none) var(--ospo-spacing-2xl);
    }

    @media (min-width: $screen-xl) {
      grid-template-areas:
        "intro      toc"
        "content    toc";
      grid-template-rows: auto 1fr;
      grid-template-columns: 7fr 2fr;
      column-gap: var(--ospo-gap-large);
      row-gap: var(--ospo-gap-none);
    }
  }
}

.sidebar {
  position: relative;
}

.docs-nav-container {
  border-right: var(--ospo-border-width-thin) solid var(--ospo-border-color);
  height: 100%;

  &.is-open {
    visibility: visible;
  }

  @media (max-width: $screen-lg) {
    visibility: hidden;
  }
}

.docs-sidebar {
  @media (max-width: $screen-lg) {
    position: fixed;
    top: 0;
    left: 0;
    margin-top: var(--ospo-spacing-none);
    display: flex;
    flex-direction: column;
    height: 100vh;
    z-index: var(--z-index-docs-nav);
    border-radius: var(--ospo-border-radius-sharp);
    transform: none;
    color: var(--ospo-text-color);
    background-color: var(--ospo-nav-container-bg-color, white);
    background-clip: padding-box;
    outline: 0;
    overflow-y: scroll;
  }

  @media (min-width: $screen-lg) {
    position: sticky;
    top: 81px;
    height: 100vh -81px;
    overflow-y: auto;
  }
}

.docs-nav-backdrop {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: var(--color-black);
  z-index: var(--z-index-docs-nav-backdrop);
}

.docs-nav-backdrop.show {
  opacity: 0.5;
}

.docs-sidebar {
  width: var(--ospo-size-width-medium);

  &__header {
    flex: none;
  }

  &__header-nav {
    display: flex;
    align-items: center;
    flex-grow: 1;
    -webkit-box-flex: 1;

    border-bottom: var(--ospo-border-width-thin) solid var(--ospo-border-color);
    padding: var(--ospo-spacing-lg) 0 var(--ospo-spacing-lg)
      var(--ospo-spacing-xl);

    .docs-title {
      flex-grow: 1;
      -webkit-box-flex: 1;
      padding-left: var(--ospo-spacing-xs);
    }
  }

  &__button-close {
    flex-shrink: 0;
    margin-right: var(--ospo-spacing-md);

    @media (min-width: $screen-lg) {
      display: none;
    }
  }

  &__content {
    margin-left: var(--ospo-spacing-lg);
    padding-top: var(--ospo-spacing-lg);
    flex: 1;

    ul {
      @extend .ul-reset;
      padding-inline-start: 0;
    }

    > ul:first-child {
      padding: var(--ospo-spacing-md) var(--ospo-spacing-none);
    }

    li {
      display: flex;
      flex-direction: column;
    }
  }
}

.docs-sidebar ul li {
  li .docs-sidebar-section__title {
    padding-left: var(--ospo-spacing-lg);
  }

  li .docs-sidebar-link {
    padding-left: var(--ospo-spacing-lg);
  }

  li li .docs-sidebar-link {
    padding-left: var(--ospo-spacing-xl);
  }
}

.docs-subnav {
  display: flex;
  flex-grow: 1;
  -webkit-box-flex: 1;
  align-items: center;
  margin-top: var(--ospo-spacing-xl);

  @media (min-width: $screen-lg) {
    padding: var(--ospo-spacing-none) var(--ospo-spacing-2xl);
  }

  @media (max-width: $screen-lg) {
    border-bottom: var(--ospo-border-width-thin) solid var(--ospo-border-color);
    padding: var(--ospo-spacing-none) var(--ospo-spacing-lg);
    font-size: var(--ospo-font-body-size-medium);
    margin-top: var(--ospo-spacing-none);
  }

  &__breadcrumbs {
    flex-grow: 1;
    -webkit-box-flex: 1;
  }

  &__sidebar-hamburger {
    flex-shrink: 0;
    margin-right: var(--ospo-spacing-md);
    text-align: left;

    @media (min-width: $screen-lg) {
      display: none;
    }
  }
}

.docs-button {
  height: var(--ospo-icon-size-large);
  width: var(--ospo-icon-size-large);
  background-color: transparent;
  border: 0;
  padding: 0;
  border-radius: var(--ospo-border-radius-medium);
  line-height: var(--ospo-font-icon-button-line-height);
  text-decoration: none;
  color: var(--ospo-button-color);
  cursor: pointer;

  &:hover {
    background-color: var(--ospo-color-background-hover);
  }

  svg {
    display: inline-block;
    user-select: none;
    vertical-align: text-bottom;
    overflow: visible;
  }
}

.docs-sidebar-section {
  &__title {
    display: flex;
    align-items: center;
    flex-grow: 1;
    -webkit-box-flex: 1;
    padding: var(--ospo-spacing-sm) var(--ospo-spacing-md);
    margin: var(--ospo-spacing-none) var(--ospo-spacing-md);
    font-size: var(--ospo-font-body-size-medium);
    color: var(--ospo-link-color);
    line-height: var(--ospo-font-body-line-height-medium);
    cursor: pointer;

    > span:first-child {
      flex-grow: 1;
      -webkit-box-flex: 1;
      word-break: break-word;
      font-weight: var(--ospo-font-weight-medium);
    }
  }

  &__icon {
    flex-shrink: 0;
    height: var(--ospo-size-height-medium);
    margin-left: var(--ospo-spacing-md);

    svg {
      display: inline-block;
      user-select: none;
      vertical-align: text-bottom;
      overflow: visible;
    }
  }

  // on accordion expanded
  &.accordion__active > .accordion__title > .docs-sidebar-section__icon {
    @media (prefers-reduced-motion: reduce) {
      transition: none;
    }
    transform: rotate(180deg);
  }
}

.docs-sidebar-page {
  font-size: var(--ospo-font-body-size-medium);
  font-weight: var(--ospo-font-weight-medium);

  a {
    flex-grow: 1;
    -webkit-box-flex: 1;
    word-break: break-word;
    line-height: var(--ospo-font-body-line-height-medium);
    padding: var(--ospo-spacing-sm) var(--ospo-spacing-md);
  }
}

.docs-sidebar-link {
  margin: var(--ospo-spacing-none) var(--ospo-spacing-md);

  &:hover {
    border-radius: var(--ospo-border-radius-medium);
    background-color: var(--ospo-color-background-hover);
  }
}

.docs-content {
  grid-area: content;
  padding-bottom: var(--ospo-spacing-7xl);

  h1,
  h2 {
    border-bottom: var(--ospo-border-width-thin) solid
      var(--ospo-border-color-muted);
  }
}

.heading-link:hover {
  text-decoration: underline;
}

.heading-link-symbol {
  display: inline-block;
  margin-left: 0.5rem;
  width: 16px;
  height: 16px;
  mask: url('data:image/svg+xml;charset=utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path d="m7.775 3.275 1.25-1.25a3.5 3.5 0 1 1 4.95 4.95l-2.5 2.5a3.5 3.5 0 0 1-4.95 0 .751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018 1.998 1.998 0 0 0 2.83 0l2.5-2.5a2.002 2.002 0 0 0-2.83-2.83l-1.25 1.25a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042Zm-4.69 9.64a1.998 1.998 0 0 0 2.83 0l1.25-1.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042l-1.25 1.25a3.5 3.5 0 1 1-4.95-4.95l2.5-2.5a3.5 3.5 0 0 1 4.95 0 .751.751 0 0 1-.018 1.042.751.751 0 0 1-1.042.018 1.998 1.998 0 0 0-2.83 0l-2.5 2.5a1.998 1.998 0 0 0 0 2.83Z"></path></svg>');
  mask-size: cover;
  background-color: var(--ospo-text-color-muted);
  @media (forced-colors: active) {
    background-color: LinkText;
  }
}

.docs-intro {
  grid-area: intro;

  h1 {
    margin-top: var(--ospo-spacing-none);
    margin-bottom: var(--ospo-spacing-none);
  }

  .article-intro {
    padding-bottom: var(--ospo-spacing-xl);
    p {
      margin-top: var(--ospo-spacing-none);
      margin-bottom: var(--ospo-spacing-md);
      color: var(--ospo-text-color-muted);
      font-weight: var(--ospo-font-weight-regular);
    }
  }
}

/******************************************
*           TABLE OF CONTENT
******************************************/

.docs-toc-container {
  grid-area: toc;
  padding-right: var(--ospo-spacing-md);
}

.toc {
  font-size: var(--ospo-font-body-size-medium);
  margin-block-start: 1em;
  margin-block-end: 1em;
  padding-bottom: var(--ospo-spacing-xl);
  border-bottom: var(--ospo-border-width-thin) solid var(--ospo-border-color);

  @media (min-width: $screen-xl) {
    position: sticky;
    right: 0;
    z-index: 2;
    height: calc(100vh - 80px);
    overflow-y: auto;
    border: none;
  }

  &__heading {
    font-weight: var(--ospo-font-weight-semibold);
    margin-bottom: var(--ospo-spacing-xs);
  }

  &__content {
    margin: var(--ospo-spacing-md) var(--ospo-spacing-none);
  }

  ul {
    padding-left: var(--ospo-spacing-none);
    margin-bottom: var(--ospo-spacing-none);
    list-style: none;

    ul {
      padding-left: var(--ospo-spacing-lg);
    }
  }

  a {
    display: block;
    color: inherit;
    text-decoration: none;
    padding: var(--ospo-spacing-xs) var(--ospo-spacing-none)
      var(--ospo-spacing-xs) var(--ospo-spacing-sm);
    border-left: var(--ospo-border-width-thick) solid transparent;

    &:hover,
    &.active {
      border-left-color: var(--color-gray-400);
    }

    &.active {
      font-weight: var(--ospo-font-weight-regular);
    }
  }
}

/******************************************
*             ACCORDION
******************************************/

.accordion {
  &__content {
    display: none;
    overflow: hidden;
    will-change: max-height;
    transition: all 0.25s ease-out;
    opacity: 0;
  }

  &__active > .accordion__content {
    display: block;
    opacity: 1;
  }
}

/******************************************
*             BREADCRUMB
******************************************/

.breadcrumb {
  display: flex;
  flex-wrap: wrap;
  padding: var(--ospo-spacing-none);
  list-style: none;
}

.breadcrumb-item + .breadcrumb-item {
  padding-left: var(--ospo-spacing-md);
}

.breadcrumb-item + .breadcrumb-item::before {
  float: left;
  padding-right: var(--ospo-spacing-md);
  content: var(--ospo-breadcrumb-divider, "/");
}

.breadcrumb-item.active {
  color: var(--ospo-breadcrumb-item-active-color);
}

/******************************************
*              PREV / NEXT 
******************************************/

.docs-pager-nav {
  display: grid;
  grid-row-gap: var(--ospo-gap-small);
  padding-top: var(--ospo-spacing-xl);
  border-top: var(--ospo-border-width-thin) solid var(--ospo-border-color);
  margin-top: var(--ospo-spacing-4xl);

  @media (min-width: $screen-md) {
    grid-template-columns: repeat(2, 1fr);
    grid-column-gap: var(--ospo-gap-default);
  }
}

.docs-pager {
  &__desc {
    color: var(--color-gray-800);
    font-size: var(--ospo-font-body-size-medium);
    font-weight: var(--ospo-font-weight-regular);
    line-height: var(--ospo-font-body-line-height-medium);
    display: block;
  }

  &__title {
    font-size: var(--ospo-font-heading-size-small);
    font-weight: var(--ospo-font-weight-regular);
    line-height: var(--ospo-font-body-line-height-small);
    word-break: break-word;
    display: block;
  }
}

.docs-pager-link {
  border: var(--ospo-border-width-thin) solid var(--ospo-border-color);
  border-radius: var(--ospo-border-radius-medium);
  padding: var(--ospo-spacing-md) var(--ospo-spacing-lg);
  width: 100%;
  height: 100%;
  line-height: var(--ospo-font-body-line-height-medium);
  display: block;

  &:hover {
    border-color: var(--color-gray-800);
  }

  &.next {
    margin-left: auto;
    text-align: right;
  }
}

